# eventbrite-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: API_Reference.md  CLI_Usage.md  Development.md  Project_Info.md  Setup.md  Transform.md
output/: events.csv  events.json  newsletter.html
src/eventbrite_extractor/: __init__.py  client.py  config.py  extract_events.py  render.py  transform.py
src/eventbrite_extractor/templates/: newsletter.html
tests/: test_client.py  test_render.py  test_transform.py
